--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 ---
 theme :
-  name : mark-reid
+  name : Violet
 ---
 {% include JB/setup %}
-{% include themes/mark-reid/default.html %}
+{% include themes/Violet/default.html %}
