update config and new theme

--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -30,8 +30,7 @@
       <nav class="nav">
         <a href="/" title="Home" rel="nofollow">Home</a>
         <a href="/archives.html" rel="bookmark" title="Archives">Archives</a>
-        <a href="/ChangeLog.html" rel="bookmark" title="ChangeLog">ChangeLog</a>
-        <a href="{{ site.feed }}" rel="feed" target="_blank">Feed</a>
+        <a href="{{ site.JB.rss_path }}" rel="feed" target="_blank">Feed</a>
       </nav><!-- .nav -->
     </section><!-- #header -->
   </header><!-- #head -->
