--- a/_includes/themes/Violet/post.html
+++ b/_includes/themes/Violet/post.html
@@ -1,7 +1,5 @@
----
-layout: default
----
 <article class="entry">
+    <h1>{{ page.title }}</h1>
   {{ content }}
   <nav id="pagination">
     {% if page.previous %}
