--- a/assets/themes/Violet/css/default.css
+++ b/assets/themes/Violet/css/default.css
@@ -172,7 +172,7 @@ a:hover {
 }
 #content {
   width: 100%;
-  min-height: 500px;
+/*  min-height: 500px;*/
   height: auto;
   background: #fff url(../images/bg.jpg) no-repeat -60px -10px;
 }
@@ -230,10 +230,10 @@ a:hover {
  * contenter
  *
  */
-#prefile {
+/*#prefile {
   height: 200px;
   background: url(../images/prefile.gif) no-repeat right 0;
-}
+}*/
 #prefile h2 {
   float: left;
   width: 560px;
