--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -43,10 +43,10 @@
     <section id="footer">
       <h4>Contact Me</h4>
       <div class="my-link">
-        <a href="http://vinntoe.com target="_blank" title="Vinntoe's blog" rel="friend">Vinntoe&nbsp;&raquo;</a>
+        <a href="http://vinntoe.com" target="_blank" title="Vinntoe's blog" rel="friend">Vinntoe&nbsp;&raquo;</a>
         <a href="http://www.github.com/vinntoe" target="_blank" title="vinntoe's github" rel="nofollow">GitHub&nbsp;&raquo;</a>
         <a href="http://www.twitter.com/vinntoe" target="_blank" title="vinntoe' twitter" rel="nofollow">Twitter&nbsp;&raquo;</a>
-        <a href="http://www.weibo.com/leftupme" target="_blank" title="vinntoe' weibo" rel="nofollow">新浪微博&nbsp;&raquo;</a>
+        <a href="http://www.weibo.com/leftupme" target="_blank" title="vinntoe's weibo" rel="nofollow">新浪微博&nbsp;&raquo;</a>
       </div>
       <div class="copyright">
         {% for line in site.copyright %}
