--- a/assets/themes/Violet/css/default.css
+++ b/assets/themes/Violet/css/default.css
@@ -254,9 +254,18 @@ a:hover {
   text-align: left;
   float: left;
 }
+#post-list h2 {
+  display: block;
+  margin: 0 0 0.5em 0;
+  line-height: 32px;
+  font-size: 22px;
+  font-weight: 700;
+  color: #000;
+  border-bottom: 1px solid #e9e9e9;
+}
 #post-list h3 {
   display: inline-block;
-  margin: 0 0 1.2em 0;
+  margin: 0 0 0.5em 0;
   line-height: 32px;
   font-size: 22px;
   font-weight: 700;
@@ -351,7 +360,9 @@ a:hover {
 #contenter .entry {
   text-align: left;
 }
-
+#contenter .entry p img{
+  width:100%;
+}
 /**
  *
  * footer
