--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,5 +2,4 @@
 theme :
   name : Violet
 ---
-{% include JB/setup %}
-{% include themes/Violet/default.html %}
+{% include JB/setup %}{% include themes/Violet/default.html %}
