--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -49,9 +49,9 @@
         <a href="http://www.weibo.com/leftupme" target="_blank" title="vinntoe's weibo" rel="nofollow">新浪微博&nbsp;&raquo;</a>
       </div>
       <div class="copyright">
-        {% for line in site.copyright %}
-            <p>{{ line }}</p>
-        {% endfor %}
+          <p>Theme design by <a href="http://www.pizn.net" rel="friend" title="pizn" target="_blank">PIZn</a></p>
+          <p>&copy; Copyright 2013, Vinntoe. All Rights Reserved.</p>
+          <p>Powered by Jekyll and GitHub. Using Jekyllboostrap.</p> 
       </div>
     </section><!-- #footer -->
   </footer><!-- #foot -->
