--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,4 @@
 ---
 layout: default
 ---
-{% include JB/setup %}
-{% include themes/Violet/post.html %}
+{% include JB/setup %}{% include themes/Violet/post.html %}
