--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -29,6 +29,7 @@
     <section id="header">
       <nav class="nav">
         <a href="/" title="Home" rel="nofollow">Home</a>
+        <a href="/tags.html" rel="bookmark" title="Archives">Tags</a>
         <a href="/archives.html" rel="bookmark" title="Archives">Archives</a>
         <a href="{{ site.JB.rss_path }}" rel="feed" target="_blank">Feed</a>
       </nav><!-- .nav -->
@@ -49,7 +50,7 @@
         <a href="http://www.weibo.com/leftupme" target="_blank" title="vinntoe's weibo" rel="nofollow">新浪微博&nbsp;&raquo;</a>
       </div>
       <div class="copyright">
-          <p>Theme design by <a href="http://www.pizn.net" rel="friend" title="pizn" target="_blank">PIZn</a></p>
+          <p>Theme design by <a href="http://www.pizn.net" rel="friend" title="pizn" target="_blank">PIZn</a>. Modified by <a href="http://vinntoe.com" rel="self" title="Vinntoe">Vinntoe</a></p>
           <p>&copy; Copyright 2013, Vinntoe. All Rights Reserved.</p>
           <p>Powered by Jekyll and GitHub. Using Jekyllboostrap.</p> 
       </div>
