--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -18,11 +18,12 @@
   <meta name="author" content="{{ site.author.name }}" />
   <meta name="description" content="{{ site.description }}" />
   <link rel="stylesheet" href="{{ ASSET_PATH }}/css/default.css" type="text/css" />
-  <link rel="stylesheet" href="{{ ASSET_PATH }}/css/cc-knight.css" type="text/css" />
+  {% if page.is_post %}<!--<link rel="stylesheet" href="{{ ASSET_PATH }}/css/cc-knight.css" type="text/css" />--><!-- use colorcode.js for code highlight-->
+  <!--<link rel="stylesheet" href="{{ ASSET_PATH }}/pygments.css" type="text/css" />--><!-- use pygments for code highlight-->{% endif %}
   <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <script src="{{ ASSET_PATH }}/js/html5.js" type="text/javascript"></script>
-  <script src="{{ ASSET_PATH }}/js/colorcode.js" type="text/javascript"></script>
+  <!--<script src="{{ ASSET_PATH }}/js/colorcode.js" type="text/javascript"></script>-->
 </head>
 <body>
   <header id="head">
@@ -56,11 +57,11 @@
       </div>
     </section><!-- #footer -->
   </footer><!-- #foot -->
-  <script type="text/javascript">
+  <!--<script type="text/javascript">
     window.onload = function() {
         DlHighlight.HELPERS.highlightByName('colorcode', 'pre','', true);
     }
-  </script>
+  </script>--><!-- use colorcode.js for code highlight-->
 {% include JB/analytics %}
   <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 </body>
