--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -1,38 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    **
-    *
-    * Author:         PIZn
-    * Contact:        pizner@gmail.com
-    * Theme Name:     Violet
-    * Version:        1.5
-    * PS:             为什么你会看到这里呢？
-    *
-    **
-  -->
   <meta charset="utf-8" />
   <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
   <meta name="generator" content="Jekyll" />
   <meta name="author" content="{{ site.author.name }}" />
   <meta name="description" content="{{ site.description }}" />
   <link rel="stylesheet" href="{{ ASSET_PATH }}/css/default.css" type="text/css" />
-  {% if page.is_post %}<!--<link rel="stylesheet" href="{{ ASSET_PATH }}/css/cc-knight.css" type="text/css" />--><!-- use colorcode.js for code highlight-->
-  <!--<link rel="stylesheet" href="{{ ASSET_PATH }}/pygments.css" type="text/css" />--><!-- use pygments for code highlight-->{% endif %}
-  <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
+  <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.JB.rss_path }}" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <script src="{{ ASSET_PATH }}/js/html5.js" type="text/javascript"></script>
-  <!--<script src="{{ ASSET_PATH }}/js/colorcode.js" type="text/javascript"></script>-->
 </head>
 <body>
   <header id="head">
     <section id="header">
       <nav class="nav">
-        <a href="/" title="Home" rel="nofollow">Home</a>
-        <a href="/tags.html" rel="bookmark" title="Archives">Tags</a>
-        <a href="/archives.html" rel="bookmark" title="Archives">Archives</a>
-        <a href="{{ site.JB.rss_path }}" rel="feed" target="_blank">Feed</a>
+        <ul>
+          <li><a href="/" title="Home" rel="nofollow">Home</a></li>
+          {% assign pages_list = site.pages %}
+          {% assign group = 'navigation' %}
+          {% include JB/pages_list %}
+        </ul>
       </nav><!-- .nav -->
     </section><!-- #header -->
   </header><!-- #head -->
@@ -57,11 +45,6 @@
       </div>
     </section><!-- #footer -->
   </footer><!-- #foot -->
-  <!--<script type="text/javascript">
-    window.onload = function() {
-        DlHighlight.HELPERS.highlightByName('colorcode', 'pre','', true);
-    }
-  </script>--><!-- use colorcode.js for code highlight-->
 {% include JB/analytics %}
   <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 </body>
