--- a/assets/themes/Violet/css/default.css
+++ b/assets/themes/Violet/css/default.css
@@ -267,13 +267,13 @@ a:hover {
   margin: 0 0 0.5em 0;
   line-height: 32px;
   font-size: 22px;
-  font-weight: 700;
+  /*font-weight: 700;*/
   color: #000;
   border-bottom: 1px solid #e9e9e9;
 }
 #post-list h3 {
   display: inline-block;
-  margin: 0 0 0.5em 0;
+  /*margin: 0 0 0.5em 0;*/
   line-height: 32px;
   font-size: 22px;
   font-weight: 700;
@@ -376,7 +376,7 @@ a:hover {
   text-align: left;
 }
 
-#page h1{
+#page h1,#page h2{
   border: 0 none;
   margin: 12px 0 0;
   padding: 10px 0 0;
@@ -384,6 +384,32 @@ a:hover {
   font-size: 32px;
   line-height: normal;
 }
+
+.tagpost  h2{
+  font-size: 16px;
+  line-height: 1.5em;
+  margin: 1.5em 0 1.5em 0;
+  font-weight: bold;
+}
+
+.tagpost ul,#page ul.pages{
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  line-height: 1.5em;
+  padding-left: 1.5em;
+}
+
+.tagpost ul li,#page ul.pages li{
+  margin: 5px;
+  font-size: 14px;
+  list-style-type: square;
+  list-style-position: outside;
+}
+
+#page ul.pages li a{
+  font-size: 16px;
+}
+
 .tag_box {
   list-style: none;
   margin: 0;
@@ -391,7 +417,8 @@ a:hover {
 }
 
 .tag_box li {
-  line-height: 28px; 
+  line-height: 28px;
+  list-style-type: none; 
 }
 
 .tag_box li i {
@@ -427,26 +454,7 @@ a:hover {
   color: #FFF; 
 }
 
-.tagpost  h2{
-  font-size: 16px;
-  line-height: 1.5em;
-  margin: 1.5em 0 1.5em 0;
-  font-weight: bold;
-}
 
-.tagpost ul{
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
-  line-height: 1.5em;
-  padding-left: 1.5em;
-}
-
-.tagpost ul li{
-  margin: 5px;
-  font-size: 14px;
-  list-style-type: square;
-  list-style-position: outside;
-}
 
 /**
  *
