--- a/assets/themes/Violet/css/default.css
+++ b/assets/themes/Violet/css/default.css
@@ -389,7 +389,7 @@ a:hover {
   font-size: 16px;
   line-height: 1.5em;
   margin: 1.5em 0 1.5em 0;
-  font-weight: bold;
+  /*font-weight: bold;*/
 }
 
 .tagpost ul,#page ul.pages{
