--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="{{ ASSET_PATH }}/css/default.css" type="text/css" />
   <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.JB.rss_path }}" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <!--[if lte IE 9]>
   <script src="{{ ASSET_PATH }}/js/html5.js" type="text/javascript"></script>
+  <![endif]-->
 </head>
 <body>
   <header id="head">
@@ -46,6 +48,8 @@
     </section><!-- #footer -->
   </footer><!-- #foot -->
 {% include JB/analytics %}
+{% if page.is_index %}
   <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+{% endif %}
 </body>
 </html>
