--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -5,9 +5,11 @@
   <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
   <meta name="generator" content="Jekyll" />
   <meta name="author" content="{{ site.author.name }}" />
-  <meta name="description" content="{{ site.description }}" />
+  <meta name="keywords" content="{% if page.keywords %}{{ page.keywords }}{% else %}{{ site.keywords }}{% endif %}" />
+  <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
   <link rel="stylesheet" href="{{ ASSET_PATH }}/css/default.css" type="text/css" />
-  <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.JB.rss_path }}" />
+  <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
+  <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <!--[if lte IE 9]>
   <script src="{{ ASSET_PATH }}/js/html5.js" type="text/javascript"></script>
