--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -37,13 +37,13 @@
     <section id="footer">
       <h4>Contact Me</h4>
       <div class="my-link">
-        <a href="http://vinntoe.com" target="_blank" title="Vinntoe's blog" rel="friend">Vinntoe&nbsp;&raquo;</a>
-        <a href="http://www.github.com/vinntoe" target="_blank" title="vinntoe's github" rel="nofollow">GitHub&nbsp;&raquo;</a>
-        <a href="http://www.twitter.com/vinntoe" target="_blank" title="vinntoe' twitter" rel="nofollow">Twitter&nbsp;&raquo;</a>
-        <a href="http://www.weibo.com/leftupme" target="_blank" title="vinntoe's weibo" rel="nofollow">新浪微博&nbsp;&raquo;</a>
+        <a href="http://Vinntoe.com" target="_blank" title="Vinntoe's blog" rel="friend">Vinntoe&nbsp;&raquo;</a>
+        <a href="http://github.com/Vinntoe" target="_blank" title="Vinntoe's github" rel="nofollow">GitHub&nbsp;&raquo;</a>
+        <a href="http://twitter.com/Vinntoe" target="_blank" title="Vinntoe' twitter" rel="nofollow">Twitter&nbsp;&raquo;</a>
+        <a href="http://weibo.com/leftupme" target="_blank" title="Vinntoe's weibo" rel="nofollow">新浪微博&nbsp;&raquo;</a>
       </div>
       <div class="copyright">
-          <p>Theme design by <a href="http://www.pizn.net" rel="friend" title="pizn" target="_blank">PIZn</a>. Modified by <a href="http://vinntoe.com" rel="self" title="Vinntoe">Vinntoe</a></p>
+          <p>Theme design by <a href="http://www.pizn.net" rel="friend" title="pizn" target="_blank">PIZn</a>. Modified by <a href="http://Vinntoe.com" rel="self" title="Vinntoe">Vinntoe</a></p>
           <p>&copy; Copyright 2013, Vinntoe. All Rights Reserved.</p>
           <p>Powered by Jekyll and GitHub. Using Jekyllboostrap.</p> 
       </div>
