--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -11,6 +11,7 @@
   <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
   <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="canonical" href="{% if page.is_index %}{{ site.production_url }}{% else %}{{ site.production_url }}{{ page.url }}{% endif %}"/>
   <!--[if lte IE 9]>
   <script src="{{ ASSET_PATH }}/js/html5.js" type="text/javascript"></script>
   <![endif]-->
