cache plusone.js

--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -52,7 +52,7 @@
   </footer><!-- #foot -->
 {% include JB/analytics %}
 {% if page.is_index %}
-  <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/plusone.js"></script>
 {% endif %}
 </body>
 </html>
