--- a/assets/themes/Violet/css/default.css
+++ b/assets/themes/Violet/css/default.css
@@ -172,7 +172,7 @@ a:hover {
 }
 #contenter {
   width: 760px;
-  padding: 20px 10px;
+  padding: 20px 10px 0;
   height: auto;
   margin: 0 auto;
   text-align: center;
@@ -446,7 +446,7 @@ a:hover {
  *
  */
 #footer h4 {
-  margin: 0 0 1.2em 0;
+  margin: 0 0 0.5em 0;
   line-height: 32px;
   font-size: 22px;
   font-weight: 700;
@@ -737,3 +737,27 @@ a:hover {
   color: #555;
 }
 
+/* up and down */
+#updown{position:fixed;top:55%;left:50%;display:block;margin-left:-450px;margin-top: -80px;}
+#up,#comt,#down{background:url(../images/updown.png) no-repeat;position:relative;cursor:pointer;height:25px;width:29px;margin:10px 0 0}
+#comt{background-position:left -30px;height:32px}
+#down{background-position:left -68px}
+#comt:hover{background-position:right -30px}
+#up:hover{background-position:right 0}
+#down:hover{background-position:right -68px}
+
+
+/*slimbox*/
+#lbOverlay{position:fixed;z-index:999;left:0;top:0;width:100%;height:100%;background-color:#000;cursor:pointer}
+#lbCenter,#lbBottomContainer{position:absolute;z-index:9999;overflow:hidden;background-color:#fff}
+.lbLoading{background:#fff url(../images/loading.gif) no-repeat center}
+#lbImage{position:absolute;left:0;top:0;border:10px solid #fff;background-repeat:no-repeat}
+#lbPrevLink,#lbNextLink{display:block;position:absolute;top:0;width:50%;outline:none}
+#lbPrevLink{left:0}
+#lbPrevLink:hover{background:transparent url(../images/prevlabel.gif) no-repeat 0 15%}
+#lbNextLink{right:0}
+#lbNextLink:hover{background:transparent url(../images/nextlabel.gif) no-repeat 100% 15%}
+#lbBottom{font-family:Verdana, Arial, Geneva, Helvetica, sans-serif;font-size:10px;color:#666;line-height:1.4em;text-align:left;border:10px solid #fff;border-top-style:none}
+#lbCloseLink{display:block;float:right;width:66px;height:22px;background:transparent url(../images/closelabel.gif) no-repeat center;margin:5px 0;outline:none}
+#lbCaption,#lbNumber{margin-right:71px}
+#lbCaption{font-weight:700}
