--- a/_includes/themes/Violet/post.html
+++ b/_includes/themes/Violet/post.html
@@ -1,5 +1,23 @@
 <article class="entry">
     <h1>{{ page.title }}</h1>
+    {% if page.tags %}
+    <div class="tags">
+      <span>Tags: </span>
+      {% assign tags_list = page.tags %}
+      {% for node in tags_list %}
+      <a target="_blank" title="查看 tag {{ node }}"href="{{ site.production_url }}{{ site.JB.tags_path }}#{{ node }}-ref">{{ node }}</a>
+      {% endfor %}
+    </div>
+    {% endif %}
+    {% if page.categories %}
+    <div class="categories">
+      <span>Categories: </span>
+      {% assign categories_list = page.categories %}
+      {% for node in categories_list %}
+      <a target="_blank" title="查看 categories {{ node }}"href="{{ site.production_url }}{{ site.JB.categories_path }}#{{ node }}-ref">{{ node }}</a>
+      {% endfor %}
+    </div>
+    {% endif %}
   {{ content }}
   <nav id="pagination">
     {% if page.previous %}
