--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -46,7 +46,7 @@
       <div class="copyright">
           <p>Theme design by <a href="http://www.pizn.net" rel="friend" title="pizn" target="_blank">PIZn</a>. Modified by <a href="http://Vinntoe.com" rel="self" title="Vinntoe">Vinntoe</a></p>
           <p>&copy; Copyright 2013, Vinntoe. All Rights Reserved.</p>
-          <p>Powered by Jekyll and GitHub. Using Jekyllboostrap.</p> 
+          <p>Powered by Jekyll and GitHub. Using Jekyllbootstrap.</p> 
       </div>
     </section><!-- #footer -->
   </footer><!-- #foot -->
