--- a/_includes/themes/Violet/post.html
+++ b/_includes/themes/Violet/post.html
@@ -1,6 +1,6 @@
 <article class="entry">
     <h1>{{ page.title }}</h1>
-    {% if page.tags %}
+    {% if page.tags[0] %}
     <div class="tags">
       <span>Tags: </span>
       {% assign tags_list = page.tags %}
@@ -9,7 +9,7 @@
       {% endfor %}
     </div>
     {% endif %}
-    {% if page.categories %}
+    {% if page.categories[0] %}
     <div class="categories">
       <span>Categories: </span>
       {% assign categories_list = page.categories %}
