--- a/_includes/themes/Violet/page.html
+++ b/_includes/themes/Violet/page.html
@@ -1,3 +1,7 @@
 <section id="page">
-  {{ content }}
+    <h2>All Pages</h2>
+    <ul class="pages">
+    {% assign pages_list = site.pages %}
+    {% include JB/pages_list %}
+    </ul>
 </section>
