--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,4 +2,4 @@
 layout: default
 is_post: true
 ---
-{% include JB/setup %}{% include themes/Violet/post.html %}
+{% include JB/setup %}{% include themes/wayne/post.html %}
