--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 ---
 theme :
-  name : wayne
+  name : Violet
 ---
-{% include JB/setup %}{% include themes/wayne/default.html %}
+{% include JB/setup %}{% include themes/Violet/default.html %}
