--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -1,4 +1,4 @@
 ---
 layout: default
 ---
-{% include JB/setup %}{% include themes/wayne/categories.html %}
+{% include JB/setup %}{% include themes/Violet/categories.html %}
