--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -27,11 +27,11 @@
             <h1><a title="{{ site.title }}" class="" href="/">{{ site.title }}</a></h1>
           </div>
           <nav>
-            <span><a title="Home" class="icon-home" href="{{ site.production_url }}"></a></span>
+            <span><a title="Home" class="icon-home" href="/"></a></span>
             <span><a title="Archive" class="icon-list-ul" href="{{ site.JB.archive_path }}"></a></span>
             <span><a title="Tags" class="icon-tags" href="{{ site.JB.tags_path }}"></a></span>
             <span><a title="Categories" class="icon-bookmark" href="{{ site.JB.categories_path }}"></a></span>
-            <span><a title="About" class="icon-user" href="/about.html"></a></span>
+            <span><a title="About" class="icon-user" href="{{ site.JB.about_path }}"></a></span>
             <span><a title="Subscribe" class="icon-rss" href="{{ site.JB.rss_path }}"></a></span>
           </nav>
         </header>
