--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,4 +1,4 @@
 ---
 layout: default
 ---
-{% include JB/setup %}{% include themes/Violet/archive.html %}
+{% include JB/setup %}{% include themes/wayne/archive.html %}
