--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,4 +1,4 @@
 ---
 layout: default
 ---
-{% include JB/setup %}{% include themes/Violet/index.html %}
+{% include JB/setup %}{% include themes/wayne/index.html %}
