add jquery-1.9.1 and fix slimbox bug

--- a/_includes/themes/Violet/default.html
+++ b/_includes/themes/Violet/default.html
@@ -54,7 +54,7 @@
 {% if page.is_index %}
   <script type="text/javascript" src="{{ ASSET_PATH }}/js/plusone.js"></script>
 {% endif %}
-<script type="text/javascript" src="{{ ASSET_PATH }}/js/jQuery.js"></script>
+<script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="{{ ASSET_PATH }}/js/main.js"></script>
 <div id="updown">
   <div id="up" title="我要上天!"></div>
