--- a/assets/themes/wayne/css/style.css
+++ b/assets/themes/wayne/css/style.css
@@ -10,6 +10,12 @@
   font-weight: 400;
   src: local('Coda'), local('Coda-Regular'), url(../font/Coda.woff) format('woff');
 }
+.clearfix:after { content: ".";display: block;height: 0;clear: both;visibility: hidden;}
+.clearfix {display: inline-block;}
+/* Hides from IE-mac \*/
+* html .clearfix {height: 1%;}
+.clearfix {display: block;}
+/* End hide from IE-mac */
 /*------------------------------------
 * sext-v
 *
@@ -53,7 +59,8 @@ ol, ul {
   width: 680px;
   margin: 0 auto;
   /*margin: 5em auto 4em auto;*/
-  text-align: center; }
+  text-align: center;
+  text-align: left; }
   #header a {
     color: #999999;
     text-shadow: #e9e9e9 2px 2px 2px; }
@@ -61,9 +68,26 @@ ol, ul {
       color: #333333; }
   #header h1 {
     display: block;
+    float:left;
     font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
 
-nav {
+nav.floatnav {
+  float:left;
+  margin: 2px 0 0 80px;
+  padding: 1px 0;
+}
+nav.floatnav span {
+  line-height: 40px;
+  margin: 1em 1em 0em 0; }
+nav.floatnav a {
+  font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+  font-size: 1.25em;
+  text-transform: uppercase;
+  color: #afafaf; }
+nav.floatnav a:hover {
+  color: #333333; }
+
+nav.fixnav {
   width: 20px;
   margin: 0 auto;
   padding: 1px 0;
@@ -71,16 +95,16 @@ nav {
   position: fixed;
   top: 1em;
   right: 2em; }
-  nav span {
-    display: block;
-    margin: 1em 0; }
-  nav a {
-    font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
-    font-size: 1.25em;
-    text-transform: uppercase;
-    color: #afafaf; }
-  nav a:hover {
-    color: #333333; }
+nav.fixnav span {
+  display: block;
+  margin: 1em 0; }
+nav.fixnav a {
+  /*font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;*/
+  font-size: 1.25em;
+  text-transform: uppercase;
+  color: #afafaf; }
+nav.fixnav a:hover {
+  color: #333333; }
 
 #content {
   width: 680px;
