--- a/_includes/themes/wayne/page.html
+++ b/_includes/themes/wayne/page.html
@@ -1,10 +1,10 @@
-<article>
+<div class="article">
   {% if page.title %}
-  <section class="title">
+  <div class="title">
     <h2>{{ page.title }} </h2>
-  </section>
+  </div>
   {% endif %}
-  <section class="post">
+  <div class="post">
   {{ content }}
-  </section>
-</article>
+  </div>
+</div>
