--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -1,11 +1,11 @@
 <div>
   <ul class="listing">
-  {% for post in site.posts limit: 4 %}
-  <article class="content">
-    <section class="title">
+  {% for post in site.posts limit: 3 %}
+  <div class="content article">
+    <div class="title">
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-    </section>
-    <section class="meta">
+    </div>
+    <div class="meta">
     <span class="time">
       <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
     </span>
@@ -16,11 +16,11 @@
       {% endfor %}
     </span>
     {% endif %}
-    </section>
-    <section class="post">
+    </div>
+    <div class="post">
     {{ post.content }}
-    </section>
-    </article>
+    </div>
+  </div>
   {% endfor %}
   </ul>
   <div class="center">
