--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,4 +2,4 @@
 theme :
   name : wayne
 ---
-{% include JB/setup %}{% include themes/wayne/default.html %}
+{% include JB/setup %}{% include themes/Violet/default.html %}
