modify theme and add theme switch script

--- a/_includes/themes/wayne/post.html
+++ b/_includes/themes/wayne/post.html
@@ -18,7 +18,7 @@
   {{ content }}
   </div>
   {% if page.is_post %}
-  <div class="comment">
+  <div class="comment" id="comment">
   {% include JB/comments %}
   </div>
   {% endif %}
