--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -6,60 +6,57 @@
     <meta name="keywords" content="{% if page.keywords %}{{ page.keywords }}{% else %}{{ site.keywords }}{% endif %}" />
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link href="{{site.JB.atom_path}}" rel="alternate" title="{{ site.title }}" type="application/atom+xml" />
-    <!--[if lt IE 9]>
-      <script type = "text/javascript">
-        (function(elem) {
-          var i, element;
-          for (i = 0; i < elem.length; i++) {
-            element = elem[i];
-            document.createElement(element);
-          }
-        })(["header","nav","footer"]) </script>
-    <![endif]-->
-    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.css">
-    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/github.css">
-    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.css" />
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/github.css" />
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.min.css" />
     <link rel="canonical" href="{% if page.is_index %}{{ site.production_url }}{% else %}{{ site.production_url }}{{ page.url }}{% endif %}" />
     <!--[if IE 7]>
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome-ie7.min.css">
     <![endif]-->
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/highlight.pack.js"></script>
-    <script type="text/javascript">
-      hljs.initHighlightingOnLoad();
-    </script>
   </head>
   <body>
       <div id="main" role="main">
-        <header>
+        <div id="outheader">
           <div id="header" class="clearfix">
             <h1><a title="{{ site.title }}" class="" href="/">{{ site.title }}</a></h1>
-            <nav class="floatnav">
+            <div class="floatnav">
               <span><a title="Archive" href="{{ site.JB.archive_path }}">Archive</a></span>
               <span><a title="Tags" href="{{ site.JB.tags_path }}">Tags</a></span>
               <span><a title="Categories" href="{{ site.JB.categories_path }}">Categories</a></span>
               <span><a title="About" href="{{ site.JB.about_path }}">About</a></span>
               <span><a title="Subscribe" href="{{ site.JB.rss_path }}">Feed</a></span>
-            </nav>
+            </div>
           </div>
-          <nav class="fixnav">
+          <div class="fixnav">
             <span><a title="Home" class="icon-home" href="/"></a></span>
             <span><a title="Archive" class="icon-list-ul" href="{{ site.JB.archive_path }}"></a></span>
             <span><a title="Tags" class="icon-tags" href="{{ site.JB.tags_path }}"></a></span>
             <span><a title="Categories" class="icon-bookmark" href="{{ site.JB.categories_path }}"></a></span>
             <span><a title="About" class="icon-user" href="{{ site.JB.about_path }}"></a></span>
             <span><a title="Subscribe" class="icon-rss" href="{{ site.JB.rss_path }}"></a></span>
-          </nav>
-        </header>
+          </div>
+        </div>
         <div id="content">
         {{ content }}
         </div>
-        <footer>
+        <div id="footer">
           <div>
             &copy; 2013 Vinntoe | powered by jekyll | themed by <a href="http://lhzhang.com" target="_blank" title="sext v">sext v</a> | Modified by <a href="http://Vinntoe.com">Vinntoe</a> for jekyllbootstrap
           </div>
-        </footer>
+        </div>
       </div> <!-- main -->
+      <div id="updown">
+        <span><a class="icon-angle-up" id="up" title="up"></a></span>
+        {% if page.is_post %}<span><a class="icon-reply" id="reply" title="Reply"></a></span>{% endif %}
+        <span><a class="icon-angle-down" id="down" class="down"></a></span>
+      </div>
+      <script type="text/javascript" src="{{ ASSET_PATH }}/js/highlight.pack.js"></script>
+      <script type="text/javascript">
+        hljs.initHighlightingOnLoad();
+      </script>
+      <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery-1.9.1.min.js"></script>
+      <script type="text/javascript" src="{{ ASSET_PATH }}/js/main.js"></script>
   </body>
 </html>
