--- a/assets/themes/wayne/css/style.css
+++ b/assets/themes/wayne/css/style.css
@@ -72,23 +72,23 @@ ol, ul {
     float:left;
     font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
 
-nav.floatnav {
+div.floatnav {
   float:left;
   margin: 2px 0 0 80px;
   padding: 1px 0;
 }
-nav.floatnav span {
+div.floatnav span {
   line-height: 40px;
   margin: 1em 1em 0em 0; }
-nav.floatnav a {
+div.floatnav a {
   font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
   font-size: 1.25em;
   text-transform: uppercase;
   color: #afafaf; }
-nav.floatnav a:hover {
+div.floatnav a:hover {
   color: #333333; }
 
-nav.fixnav {
+div.fixnav {
   width: 20px;
   margin: 0 auto;
   padding: 1px 0;
@@ -96,15 +96,15 @@ nav.fixnav {
   position: fixed;
   top: 1em;
   right: 2em; }
-nav.fixnav span {
+div.fixnav span {
   display: block;
   margin: 1em 0; }
-nav.fixnav a {
+div.fixnav a {
   /*font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;*/
   font-size: 1.25em;
   text-transform: uppercase;
   color: #afafaf; }
-nav.fixnav a:hover {
+div.fixnav a:hover {
   color: #333333; }
 
 #content {
@@ -240,7 +240,7 @@ hr {
   border-top: 1px dashed #d0d0d0;
   border-bottom: 1px dashed #f9f9f9; }
 
-footer {
+#footer {
   width: 680px;
   margin: 0 auto;
   display: block;
@@ -248,9 +248,9 @@ footer {
   font-size: .9em;
   text-align: center;
   color: #909090; }
-  footer a {
+  #footer a {
     color: #cccccc; }
-    footer a:hover {
+    #footer a:hover {
       color: #999999; }
 
 #tag_cloud {
@@ -280,3 +280,43 @@ li[id*='dsq-like-'] {
 .gist {
   font-size: 13px;
   line-height: 1.6; }
+
+#updown{
+  width:50px;
+  position: fixed;
+  top:50%;
+  left: 50%;
+  margin-left: -400px;
+  margin-top: -30px;
+}
+#updown span{
+  margin:-5px 0;
+  display: block;
+  width:32px; 
+  cursor: pointer;
+}
+#updown span a{
+  font-size: 50px;
+  color:#afafaf;
+}
+#updown span a:hover{
+  color:#333;
+}
+#updown span #reply{
+  font-size: 28px;
+}
+
+/*slimbox*/
+#lbOverlay{position:fixed;z-index:999;left:0;top:0;width:100%;height:100%;background-color:#000;cursor:pointer}
+#lbCenter,#lbBottomContainer{position:absolute;z-index:9999;overflow:hidden;background-color:#fff}
+.lbLoading{background:#fff url(../images/loading.gif) no-repeat center}
+#lbImage{position:absolute;left:0;top:0;border:10px solid #fff;background-repeat:no-repeat}
+#lbPrevLink,#lbNextLink{display:block;position:absolute;top:0;width:50%;outline:none}
+#lbPrevLink{left:0}
+#lbPrevLink:hover{background:transparent url(../images/prevlabel.gif) no-repeat 0 15%}
+#lbNextLink{right:0}
+#lbNextLink:hover{background:transparent url(../images/nextlabel.gif) no-repeat 100% 15%}
+#lbBottom{font-family:Verdana, Arial, Geneva, Helvetica, sans-serif;font-size:10px;color:#666;line-height:1.4em;text-align:left;border:10px solid #fff;border-top-style:none}
+#lbCloseLink{display:block;float:right;width:66px;height:22px;background:transparent url(../images/closelabel.gif) no-repeat center;margin:5px 0;outline:none}
+#lbCaption,#lbNumber{margin-right:71px}
+#lbCaption{font-weight:700}
