--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -1,6 +1,6 @@
 <div>
   <ul class="listing">
-  {% for post in site.posts limit: 3 %}
+  {% for post in paginator.posts %}
   <div class="content article">
     <div class="title">
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
@@ -23,11 +23,24 @@
   </div>
   {% endfor %}
   </ul>
+  {% if paginator.total_pages > 1 %}
+        <div id="pagination">
+            <div class="paginator-list">
+                {% for page in (1..paginator.total_pages) %}
+                    {% if page == paginator.page %}
+                        <span class="num">{{ page }}</span>
+                    {% else %}
+                        <a class="num" href="/{%if page > 1 %}page{{ page }}/{% endif %}">{{ page }}</a>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+    {% endif %}
   <div class="center">
-  <a href="{{ site.JB.archive_path }}" class="circle-wrapper">
-  <div class="circle">&nbsp;</div>
-  <div class="circle">&nbsp;</div>
-  <div class="circle">&nbsp;</div>
-  </a>
+    <a href="{{ site.JB.archive_path }}" class="circle-wrapper">
+      <div class="circle">&nbsp;</div>
+      <div class="circle">&nbsp;</div>
+      <div class="circle">&nbsp;</div>
+    </a>
   </div>
 </div>
