--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -59,6 +59,7 @@
             hljs.initHighlightingOnLoad();
         </script>
         <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery-1.9.1.min.js"></script>
+        <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery.pjax.js"></script>
         <script type="text/javascript" src="{{ ASSET_PATH }}/js/main.js"></script>
         {% include JB/analytics %}
     </body>
