--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -1,5 +1,5 @@
 <div>
-  <ul class="listing">
+  <ul class="listing" id="listing">
   {% for post in paginator.posts %}
   <div class="content article">
     <div class="title">
@@ -27,11 +27,7 @@
         <div id="pagination">
             <div class="paginator-list">
                 {% for page in (1..paginator.total_pages) %}
-                    {% if page == paginator.page %}
-                        <span class="num">{{ page }}</span>
-                    {% else %}
-                        <a class="num" href="/{%if page > 1 %}page{{ page }}/{% endif %}">{{ page }}</a>
-                    {% endif %}
+                <a class="num{% if page == paginator.page %} current{% endif %}" href="/{%if page > 1 %}page{{ page }}/{% endif %}">{{ page }}</a>
                 {% endfor %}
             </div>
         </div>
