--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -1,5 +1,5 @@
 <div>
-  <ul class="listing" id="listing">
+  <ul class="listing">
   {% for post in paginator.posts %}
   <div class="content article">
     <div class="title">
