--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -1,5 +1,6 @@
-<div>
-  <ul class="listing">
+<div id="outer">
+  <div id="inner">
+  <ul class="listing tmp">
   {% for post in paginator.posts %}
   <div class="content article">
     <div class="title">
@@ -23,6 +24,7 @@
   </div>
   {% endfor %}
   </ul>
+  </div>
   {% if paginator.total_pages > 1 %}
         <div id="pagination">
             <div class="paginator-list">
