--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -23,8 +23,10 @@
     </div>
   </div>
   {% endfor %}
+  <div class="overmap"></div>
   </ul>
   </div>
+
   {% if paginator.total_pages > 1 %}
         <div id="pagination">
             <div class="paginator-list">
