update pjax function

--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -1,6 +1,6 @@
 <div id="outer">
   <div id="inner">
-  <ul class="listing tmp">
+  <ul class="listing">
   {% for post in paginator.posts %}
   <div class="content article">
     <div class="title">
