--- a/_includes/themes/wayne/post.html
+++ b/_includes/themes/wayne/post.html
@@ -9,7 +9,7 @@
         {% if page.tags %}
         <span class="tags">
             {% for tag in page.tags %}
-            <a href="{{site.JB.tags_path}}#{{ tag }}-ref" title="{{ tag }}">#{{ tag }}</a>
+            <a class="pjax" href="{{site.JB.tags_path}}#{{ tag }}-ref" title="{{ tag }}">#{{ tag }}</a>
             {% endfor %}
         </span>
         {% endif %}
@@ -30,10 +30,10 @@
 {% if page.previous or page.next %}
 <div id="page_nav">
     {% if page.previous %}
-    <a href='{{page.previous.url}}'>← Previous</a>
+    <a class="pjax" href='{{page.previous.url}}'>← Previous</a>
     {% endif %}
     {% if page.next %}
-    <a href='{{page.next.url}}'>Next →</a>
+    <a class="pjax" href='{{page.next.url}}'>Next →</a>
     {% endif %}
 </div>
 {% endif %}
