--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -22,21 +22,21 @@
         <div id="main" role="main">
             <div id="outheader">
                 <div id="header" class="clearfix">
-                    <h1><a title="{{ site.title }}" class="" href="/">{{ site.title }}</a></h1>
+                    <h1><a title="{{ site.title }}" class="pjax" href="/">{{ site.title }}</a></h1>
                     <div class="floatnav">
-                        <span><a title="Archive" href="{{ site.JB.archive_path }}">Archive</a></span>
-                        <span><a title="Tags" href="{{ site.JB.tags_path }}">Tags</a></span>
-                        <span><a title="Categories" href="{{ site.JB.categories_path }}">Categories</a></span>
-                        <span><a title="About" href="{{ site.JB.about_path }}">About</a></span>
+                        <span><a title="Archive" class="pjax" href="{{ site.JB.archive_path }}">Archive</a></span>
+                        <span><a title="Tags" class="pjax" href="{{ site.JB.tags_path }}">Tags</a></span>
+                        <span><a title="Categories" class="pjax" href="{{ site.JB.categories_path }}">Categories</a></span>
+                        <span><a title="About" class="pjax" href="{{ site.JB.about_path }}">About</a></span>
                         <span><a title="Subscribe" href="{{ site.JB.rss_path }}">Feed</a></span>
                     </div>
                 </div>
                 <div class="fixnav">
-                    <span><a title="Home" class="icon-home" href="/"></a></span>
-                    <span><a title="Archive" class="icon-list-ul" href="{{ site.JB.archive_path }}"></a></span>
-                    <span><a title="Tags" class="icon-tags" href="{{ site.JB.tags_path }}"></a></span>
-                    <span><a title="Categories" class="icon-bookmark" href="{{ site.JB.categories_path }}"></a></span>
-                    <span><a title="About" class="icon-user" href="{{ site.JB.about_path }}"></a></span>
+                    <span><a title="Home" class="icon-home pjax" href="/"></a></span>
+                    <span><a title="Archive" class="icon-list-ul pjax" href="{{ site.JB.archive_path }}"></a></span>
+                    <span><a title="Tags" class="icon-tags pjax" href="{{ site.JB.tags_path }}"></a></span>
+                    <span><a title="Categories" class="icon-bookmark pjax" href="{{ site.JB.categories_path }}"></a></span>
+                    <span><a title="About" class="icon-user pjax" href="{{ site.JB.about_path }}"></a></span>
                     <span><a title="Subscribe" class="icon-rss" href="{{ site.JB.rss_path }}"></a></span>
                 </div>
             </div>
