--- a/_includes/themes/wayne/tags.html
+++ b/_includes/themes/wayne/tags.html
@@ -7,7 +7,7 @@
   <div class="post">
     <div id='tag_cloud'>
     {% for tag in site.tags %}
-    <a href="#{{ tag[0] }}-ref" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}</a>
+    <a class="pjax" href="#{{ tag[0] }}-ref" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}</a>
     {% endfor %}
     </div>
 
@@ -17,7 +17,7 @@
     {% for post in tag[1] %}
       <li class="listing-item">
       <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
-      <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
+      <a class="pjax" href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
       </li>
     {% endfor %}
     {% endfor %}
