add fragment and html

--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -22,26 +22,30 @@
         <div id="main" role="main">
             <div id="outheader">
                 <div id="header" class="clearfix">
-                    <h1><a title="{{ site.title }}" class="pjax" href="/">{{ site.title }}</a></h1>
+                    <h1><a title="{{ site.title }}" href="/">{{ site.title }}</a></h1>
                     <div class="floatnav">
-                        <span><a title="Archive" class="pjax" href="{{ site.JB.archive_path }}">Archive</a></span>
-                        <span><a title="Tags" class="pjax" href="{{ site.JB.tags_path }}">Tags</a></span>
-                        <span><a title="Categories" class="pjax" href="{{ site.JB.categories_path }}">Categories</a></span>
-                        <span><a title="About" class="pjax" href="{{ site.JB.about_path }}">About</a></span>
+                        <span><a title="Archive" data-fragment=".vcontent" class="pjax" href="{{ site.JB.archive_path }}">Archive</a></span>
+                        <span><a title="Tags" data-fragment=".vcontent" class="pjax" href="{{ site.JB.tags_path }}">Tags</a></span>
+                        <span><a title="Categories" data-fragment=".vcontent" class="pjax" href="{{ site.JB.categories_path }}">Categories</a></span>
+                        <span><a title="About" data-fragment=".vcontent" class="pjax" href="{{ site.JB.about_path }}">About</a></span>
                         <span><a title="Subscribe" href="{{ site.JB.rss_path }}">Feed</a></span>
                     </div>
                 </div>
                 <div class="fixnav">
-                    <span><a title="Home" class="icon-home pjax" href="/"></a></span>
-                    <span><a title="Archive" class="icon-list-ul pjax" href="{{ site.JB.archive_path }}"></a></span>
-                    <span><a title="Tags" class="icon-tags pjax" href="{{ site.JB.tags_path }}"></a></span>
-                    <span><a title="Categories" class="icon-bookmark pjax" href="{{ site.JB.categories_path }}"></a></span>
-                    <span><a title="About" class="icon-user pjax" href="{{ site.JB.about_path }}"></a></span>
+                    <span><a title="Home" data-fragment=".vcontent" class="icon-home pjax" href="/"></a></span>
+                    <span><a title="Archive" data-fragment=".vcontent" class="icon-list-ul pjax" href="{{ site.JB.archive_path }}"></a></span>
+                    <span><a title="Tags" data-fragment=".vcontent" class="icon-tags pjax" href="{{ site.JB.tags_path }}"></a></span>
+                    <span><a title="Categories" data-fragment=".vcontent" class="icon-bookmark pjax" href="{{ site.JB.categories_path }}"></a></span>
+                    <span><a title="About" data-fragment=".vcontent" class="icon-user pjax" href="{{ site.JB.about_path }}"></a></span>
                     <span><a title="Subscribe" class="icon-rss" href="{{ site.JB.rss_path }}"></a></span>
                 </div>
             </div>
-            <div id="content">
-            {{ content }}
+            <div id="vouter">
+                <div id="vinner">
+                    <div class="vcontent">
+                    {{ content }}
+                    </div>
+                </div>
             </div>
             <div id="footer">
                 <div>
