--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -4,7 +4,7 @@
   {% for post in paginator.posts %}
   <div class="content article">
     <div class="title">
-      <h2><a class="pjax" href="{{ post.url }}">{{ post.title }}</a></h2>
+      <h2><a data-fragment=".vcontent" class="pjax" href="{{ post.url }}">{{ post.title }}</a></h2>
     </div>
     <div class="meta">
     <span class="time">
@@ -13,7 +13,7 @@
     {% if post.tags %}
     <span class="tags">
       {% for tag in post.tags %}
-      <a class="pjax" href="/tags.html#{{ tag }}-ref" title="{{ tag }}">#{{ tag }}</a>
+      <a class="pjax" data-fragment=".vcontent" href="/tags.html#{{ tag }}-ref" title="{{ tag }}">#{{ tag }}</a>
       {% endfor %}
     </span>
     {% endif %}
@@ -37,7 +37,7 @@
         </div>
     {% endif %}
   <div class="center">
-    <a href="{{ site.JB.archive_path }}" class="circle-wrapper pjax">
+    <a href="{{ site.JB.archive_path }}" data-fragment=".vcontent" class="circle-wrapper pjax">
       <div class="circle">&nbsp;</div>
       <div class="circle">&nbsp;</div>
       <div class="circle">&nbsp;</div>
