--- a/assets/themes/wayne/css/style.css
+++ b/assets/themes/wayne/css/style.css
@@ -168,6 +168,7 @@ div.fixnav a:hover {
 
 .vcontent {
   width: 680px;
+  float:left;
   margin-left: 680px;
   font-size: 1.1em;
   line-height: 1.7em;
