--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -4,7 +4,7 @@
   {% for post in paginator.posts %}
   <div class="content article">
     <div class="title">
-      <h2><a data-fragment=".vcontent" class="pjax" href="{{ post.url }}">{{ post.title }}</a></h2>
+      <h2><a data-fragment=".vcontent" id="index_post_{{ post.pid }}" class="pjax" href="{{ post.url }}">{{ post.title }}</a></h2>
     </div>
     <div class="meta">
     <span class="time">
@@ -13,7 +13,7 @@
     {% if post.tags %}
     <span class="tags">
       {% for tag in post.tags %}
-      <a class="pjax" data-fragment=".vcontent" href="/tags.html#{{ tag }}-ref" title="{{ tag }}">#{{ tag }}</a>
+      <a class="pjax" id="index_{{ post.pid }}_{{ tag }}" data-fragment=".vcontent" href="/tags.html#{{ tag }}-ref" title="{{ tag }}">#{{ tag }}</a>
       {% endfor %}
     </span>
     {% endif %}
@@ -31,13 +31,13 @@
         <div id="pagination">
             <div class="paginator-list">
                 {% for page in (1..paginator.total_pages) %}
-                <a data-fragment="ul.homelisting" class="pjax num{% if page == paginator.page %} current{% endif %}" href="/{%if page > 1 %}page{{ page }}/{% endif %}">{{ page }}</a>
+                <a data-fragment="ul.homelisting" id="index_page_{{ page }}" class="pjax num{% if page == paginator.page %} current{% endif %}" href="/{%if page > 1 %}page{{ page }}/{% endif %}">{{ page }}</a>
                 {% endfor %}
             </div>
         </div>
     {% endif %}
   <div class="center">
-    <a href="{{ site.JB.archive_path }}" data-fragment=".vcontent" class="circle-wrapper pjax">
+    <a href="{{ site.JB.archive_path }}" id="index_archive_circle" data-fragment=".vcontent" class="circle-wrapper pjax">
       <div class="circle">&nbsp;</div>
       <div class="circle">&nbsp;</div>
       <div class="circle">&nbsp;</div>
