--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -45,7 +45,7 @@
             </div>
             <div id="footer">
                 <div>
-                    &copy; 2011-2013 自说Me话 | powered by jekyll | themed by <a href="http://lhzhang.com" target="_blank" title="sext v">sext v</a> | Modified by <a href="http://Vinntoe.com">Vinntoe</a> for Jekyllbootstrap
+                    &copy; 2011-2013 自说Me话 | powered by jekyll <br /> themed by <a href="http://lhzhang.com" target="_blank" title="sext v">sext v</a> | Modified by <a href="http://Vinntoe.com">Vinntoe</a> for Jekyllbootstrap
                 </div>
             </div>
         </div> <!-- main -->
